// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should end game when n is larger than rounds 1`] = `
Object {
  "endTime": 1970-01-01T00:00:00.001Z,
  "names": Object {
    "a": "John",
    "b": "Mary",
    "c": "Henry",
    "d": "Joe",
  },
  "rounds": 13,
  "scores": Object {
    "a": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "b": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "c": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "d": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "stage": "ended",
  "startTime": 1970-01-01T00:00:00.000Z,
}
`;

exports[`it should fill 0 for scores on skipped rounds 1`] = `
Object {
  "bid": Object {
    "a": 0,
    "b": 0,
    "c": 0,
    "d": 0,
  },
  "currentPlayerOrder": Array [
    "b",
    "c",
    "d",
    "a",
  ],
  "currentRound": 2,
  "names": Object {
    "a": "John",
    "b": "Mary",
    "c": "Henry",
    "d": "Joe",
  },
  "rounds": 13,
  "scores": Object {
    "a": Array [
      0,
    ],
    "b": Array [
      0,
    ],
    "c": Array [
      0,
    ],
    "d": Array [
      0,
    ],
  },
  "stage": "waitingBid",
  "startTime": 1970-01-01T00:00:00.000Z,
}
`;

exports[`it should skip rounds 1`] = `
Object {
  "bid": Object {
    "a": 0,
    "b": 0,
    "c": 0,
    "d": 0,
  },
  "currentPlayerOrder": Array [
    "b",
    "c",
    "d",
    "a",
  ],
  "currentRound": 6,
  "names": Object {
    "a": "John",
    "b": "Mary",
    "c": "Henry",
    "d": "Joe",
  },
  "rounds": 13,
  "scores": Object {
    "a": Array [
      0,
      0,
      0,
      0,
      0,
    ],
    "b": Array [
      0,
      0,
      0,
      0,
      0,
    ],
    "c": Array [
      0,
      0,
      0,
      0,
      0,
    ],
    "d": Array [
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "stage": "waitingBid",
  "startTime": 1970-01-01T00:00:00.000Z,
}
`;
